<?xml version="1.0"?>
<package>
  <name>orb_slam_ros</name>
  <version>1.0.0</version>
  <description>orb_slam_ros
  </description>
<maintainer email="louiszhang5@gmail.com">test</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv3</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>DBoW2_orb_slam_ros</build_depend>
  <build_depend>g2o_orb_slam_ros</build_depend>
  <build_depend>DBoWLib</build_depend>
  <build_depend>Pangolin</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv3</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>libpcl-all</run_depend>


</package>
